--- a/BiliotecaMongo/local.properties
+++ b/BiliotecaMongo/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jan 18 09:52:50 CET 2024
-sdk.dir=C\:\\Users\\carlos\\AppData\\Local\\Android\\Sdk
+#Mon Jan 22 17:27:51 CET 2024
+sdk.dir=C\:\\Users\\cmorbla\\AppData\\Local\\Android\\Sdk
