--- a/proyectoBar/Bar/app/src/main/AndroidManifest.xml
+++ b/proyectoBar/Bar/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
             android:exported="true">
         </activity>
         <activity
+            android:name=".ControllerVistaCadaMenuMeter"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".ControllerLogin"
             android:exported="true">
             <intent-filter>
